# occt_template

./: .gitignore  CMakeLists.txt  modules.cmake  modules.py  sha512.py
components/: CMakeLists.txt
components/Application/: CMakeLists.txt
components/DataExchange/: CMakeLists.txt
components/Modeling/: CMakeLists.txt
components/Visualization/: CMakeLists.txt
examples/: CMakeLists.txt
examples/glfw_imgui/: CMakeLists.txt  glfw_imgui.cpp
examples/glfw_occt_imgui/: CMakeLists.txt  GlfwOcctView.cpp  GlfwOcctView.h
examples/glfw_occt_imgui/imgui/: CMakeLists.txt
examples/glfw_occt_view/: CMakeLists.txt
